--- a/mod3.html
+++ b/mod3.html
@@ -5,7 +5,12 @@
     <title>Module 3</title>
   </head>
   <body>
-    Hello from Module 3!
+    <p>Hello from Module 3!</p>
+    <p>This is an M4V video</p>
+    <video width="1094" height="546" controls>
+      <source src="movies/Traceroute.m4v" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
     <script src='js/mod3.js'></script>
   </body>
 </html>
