--- a/mod1.html
+++ b/mod1.html
@@ -5,7 +5,17 @@
     <title>Module 1</title>
   </head>
   <body>
-    Hello from Module 1!
+    <img src='images/photo.jpg' width='200px'>
+    <h1>Printing in Python</h1>
+    <p>
+      I need words here.
+      <a href='code/module1.py' target='_blank' >Here</a> is my practice script.
+    </p>
+    <video width="407" height="213" controls>
+      <source src="m4v/py.m4v" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
     <script src='js/mod1.js'></script>
   </body>
 </html>
+Contact GitHub API Training Shop Blog About
