--- a/mod1.html
+++ b/mod1.html
@@ -5,7 +5,7 @@
     <title>Module 1</title>
   </head>
   <body>
-    <img src='images/Italian airforce.jpeg' width='200px'>
+    <img src='images/barry.jpeg' width='200px'>
     <h1>Printing in Python</h1>
     <p>
       I need words here.
