--- a/mod1.html
+++ b/mod1.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <img src='images/barry.jpeg' width='200px'>
-    <h1>Printing in Python</h1>
+    <h1>Javascript</h1>
     <p>
       I need words here.
       <a href='code/module1.py' target='_blank' >Here</a> is my practice script.
