--- a/mod1.html
+++ b/mod1.html
@@ -5,10 +5,11 @@
     <title>Module 1</title>
   </head>
   <body>
-    <img src='images/barry.jpeg' width='200px'>
+    <img src='images/java.jpg' width='200px'>
     <h1>Javascript</h1>
     <p>
-      I need words here.
+       JavaScript is a programming language commonly used in web development. It was originally developed by Netscape as a means to add dynamic and interactive elements to websites. ... Like server-side scripting languages, such as PHP and ASP, JavaScript code can be inserted anywhere within the HTML of a webpage.
+      <a href='code/module1.py' target='_blank' >Here</a> is my practice script.
       <a href='code/module1.py' target='_blank' >Here</a> is my practice script.
     </p>
     <video width="407" height="213" controls>
