--- a/mod1.html
+++ b/mod1.html
@@ -6,7 +6,14 @@
   </head>
   <body>
     <img src='images/java.jpg' width='200px'>
-    <h1>Javascript</h1>
+    <h1>Intro to Programming</h1>
+    <h2>What is Programming?</h2>
+    <p>
+       JavaScript is a programming language commonly used in web development. It was originally developed by Netscape as a means to add dynamic and interactive elements to websites. ... Like server-side scripting languages, such as PHP and ASP, JavaScript code can be inserted anywhere within the HTML of a webpage.
+      <a href='code/module1.py' target='_blank' >Here</a> is my practice script.
+      <a href='code/module1.py' target='_blank' >Here</a> is my practice script.
+    </p>
+    <h2>Learning Programming on Khan Academy</h2>
     <p>
        JavaScript is a programming language commonly used in web development. It was originally developed by Netscape as a means to add dynamic and interactive elements to websites. ... Like server-side scripting languages, such as PHP and ASP, JavaScript code can be inserted anywhere within the HTML of a webpage.
       <a href='code/module1.py' target='_blank' >Here</a> is my practice script.
