--- a/mod1.html
+++ b/mod1.html
@@ -16,7 +16,7 @@
     <h2>Learning Programming on Khan Academy</h2>
     <p>
        JavaScript is a programming language commonly used in web development. It was originally developed by Netscape as a means to add dynamic and interactive elements to websites. ... Like server-side scripting languages, such as PHP and ASP, JavaScript code can be inserted anywhere within the HTML of a webpage.
-      <a href='code/module1.py' target='_blank' >Here</a> is my practice script.
+      <a href='code/script1.py' target='_blank' >Here</a> is my practice script.
       
     </p>
     <video width="666" height="474" controls>
