--- a/mod2.html
+++ b/mod2.html
@@ -1,11 +1,20 @@
 <html>
   <head>
-    <link rel='stylesheet' type='text/css' href='style/mod2.css'>
+    <link rel='stylesheet' type='text/css' href='style/mod1.css'>
     <link rel="shortcut icon" type="image/png" href="images/eddies.png"/>
     <title>Module 2</title>
   </head>
   <body>
-    Hello from Module 2!
-    <script src='js/mod2.js'></script>
+    <img src='images/JS.png' width='200px'>
+    <h1>Module 2</h1>
+    <h2>JavaScript</h2>
+    <p>
+       I started my introduction into JavaScript coding by using the website CodeSchool.com. With this website, I have learned how to use basic equations in the JavaScript format. 
+      <a href='code/module2.js' target='_blank' >Here</a> is my list of equations.
+    <video width="272" height="298" controls>
+      <source src="m4v/java.m4v" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <script src='js/mod1.js'></script>
   </body>
 </html>
