--- a/mod3.html
+++ b/mod3.html
@@ -5,7 +5,7 @@
     <title>Module 3</title>
   </head>
   <body>
-    <img src='images/JS.png' width='200px'>
+    <img src='images/css.jpg' width='200px'>
     <h1>Module 3</h1>
     <h2>JavaScript</h2>
     <p>
