--- a/mod3.html
+++ b/mod3.html
@@ -10,7 +10,7 @@
     <h2>JavaScript</h2>
     <p>
       I have learned more JavaScript and CSS to change the color of the background
-      <a href='code/module3.js' target='_blank' >Here</a> is my list of equations.
+      <a href='code/module3.js' target='_blank' >Here</a> is my code to change color.
     <video width="272" height="298" controls>
       <source src="m4v/java.m4v" type="video/mp4">
         Your browser does not support the video tag.
