--- a/mod3.html
+++ b/mod3.html
@@ -15,6 +15,6 @@
       <source src="m4v/java.m4v" type="video/mp4">
         Your browser does not support the video tag.
     </video>
-    <script src='js/mod1.js'></script>
+    <script src='js/color.css'></script>
   </body>
 </html>
