--- a/mod3.html
+++ b/mod3.html
@@ -12,7 +12,7 @@
       I have learned more JavaScript and CSS to change the color of the background
       <a href='code/module3.js' target='_blank' >Here</a> is my code to change color.
     <video width="272" height="298" controls>
-      <source src="m4v/java.m4v" type="video/mp4">
+      <source src="m4v/color.m4v" type="video/mp4">
         Your browser does not support the video tag.
     </video>
     <script src='js/color.css'></script>
