--- a/mod3.html
+++ b/mod3.html
@@ -7,7 +7,7 @@
   <body>
     <img src='images/css.jpg' width='200px'>
     <h1>Module 3</h1>
-    <h2>JavaScript</h2>
+    <h2>CSS</h2>
     <p>
       I have learned more JavaScript and CSS to change the color of the background
       <a href='code/module3.js' target='_blank' >Here</a> is my code to change color.
