--- a/mod4.html
+++ b/mod4.html
@@ -1,11 +1,21 @@
 <html>
   <head>
-    <link rel='stylesheet' type='text/css' href='style/mod4.css'>
+    <link rel='stylesheet' type='text/css' href='style/mod3.css'>
     <link rel="shortcut icon" type="image/png" href="images/eddies.png"/>
     <title>Module 4</title>
   </head>
   <body>
-    Hello from Module 4!
-    <script src='js/mod4.js'></script>
+    <img src='images/css.jpg' width='200px'>
+    <h1>Module 4</h1>
+    <h2>JavaScript 2</h2>
+    <p>
+      I have learned more about JavaScript 
+      <a href='code/module3.js' target='_blank' >Here</a> is my code to change color.
+    <video width="272" height="298" controls>
+      <source src="m4v/color.m4v" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <script src='js/Java.js'></script>
   </body>
 </html>
+Contact GitHub API Training Shop Blog About
