--- a/mod4.html
+++ b/mod4.html
@@ -5,7 +5,7 @@
     <title>Module 4</title>
   </head>
   <body>
-    <img src='images/css.jpg' width='200px'>
+    <img src='images/images.jpg' width='200px'>
     <h1>Module 4</h1>
     <h2>JavaScript 2</h2>
     <p>
