--- a/mod4.html
+++ b/mod4.html
@@ -18,4 +18,23 @@
     <script src='js/Java.js'></script>
   </body>
 </html>
+
+var x;
+
+function changecolors() {
+    x = 1;
+    setInterval(change, 1000);
+}
+
+function change() {
+    if (x === 1) {
+        color = "red";
+        x = 2;
+    } else {
+        color = "green";
+        x = 1;
+    }
+
+    document.body.style.background = color;
+}
 Contact GitHub API Training Shop Blog About
