--- a/mod5.html
+++ b/mod5.html
@@ -8,7 +8,7 @@
     <h1>Javascript Canvas 2D</h1>
     <img src="images/canvas.png" width="400px" />
     <p>
-      I drew on an HTML canvas with the javascript 2d context API.  <a href="code/canvas2d.js">Here</a> is some of my code.
+      I drew on an HTML canvas with the javascript 2d context API.  <a href="code/canvas.js">Here</a> is some of my code.
     </p>
     <video width="400" height="300" controls>
       <source src="m4v/canvas.m4v" type="video/mp4">
