--- a/mod6.html
+++ b/mod6.html
@@ -2,16 +2,16 @@
   <head>
     <link rel='stylesheet' type='text/css' href='style/mod4.css'>
     <link rel="shortcut icon" type="image/png" href="images/eddies.png"/>
-    <title>Javascript</title>
+    <title>Benchmark</title>
   </head>
   <body>
-    <h1>Javascript Canvas 2D</h1>
-    <img src="images/canvas.png" width="400px" />
+    <h1>Benchmark Time</h1>
+    <img src="images/Benchmark.png" width="400px" />
     <p>
-      I drew on an HTML canvas with the javascript 2d context API.  <a href="code/canvas2d.js">Here</a> is some of my code.
+      I created a benchmark  <a href="code/bechmark.html">Here</a> is some of my code.
     </p>
     <video width="400" height="300" controls>
-      <source src="m4v/canvas.m4v" type="video/mp4">
+      <source src="m4v/benchmark.m4v" type="video/mp4">
         Your browser does not support the video tag.
     </video>
     <script src='js/canvas.js'></script>
