--- a/mod7.html
+++ b/mod7.html
@@ -1,11 +1,19 @@
 <html>
   <head>
-    <link rel='stylesheet' type='text/css' href='style/mod7.css'>
-    <link rel="shortcut icon" type="image/png" href="images/eddies.png"/>
-    <title>Module 7</title>
+    <link rel='stylesheet' type='text/css' href='style/mod4.css'>
+    <link rel="shortcut icon" type="image/png" href="images/OHMCalc.png"/>
+    <title>OHM CALC</title>
   </head>
   <body>
-    Hello from Module 7!
-    <script src='js/mod7.js'></script>
+    <h1>OHM CALC</h1>
+    <img src="images/canvas.png" width="400px" />
+    <p>
+      I drew on an HTML canvas with the javascript 2d context API.  <a href="code/canvas.js">Here</a> is some of my code.
+    </p>
+    <video width="400" height="300" controls>
+      <source src="m4v/ohmcalc.m4v" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <script src='js/FORLOOP.js'></script>
   </body>
 </html>
