--- a/mod8.html
+++ b/mod8.html
@@ -1,11 +1,19 @@
 <html>
   <head>
-    <link rel='stylesheet' type='text/css' href='style/mod8.css'>
-    <link rel="shortcut icon" type="image/png" href="images/eddies.png"/>
-    <title>Module 8</title>
+    <link rel='stylesheet' type='text/css' href='style/mod4.css'>
+    <link rel="shortcut icon" type="image/png" href="images/OHMCalc.png"/>
+    <title>Java</title>
   </head>
   <body>
-    Hello from Module 8!
-    <script src='js/mod8.js'></script>
+    <h1>Java Uses</h1>
+    <img src="images/canvas.png" width="400px" />
+    <p>
+      I drew on an HTML canvas with the javascript 2d context API.  <a href="code/canvas.js">Here</a> is some of my code.
+    </p>
+    <video width="400" height="300" controls>
+      <source src="m4v/ohmcalc.m4v" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <script src='js/FORLOOP.js'></script>
   </body>
 </html>
