--- a/mod8.html
+++ b/mod8.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Java Uses</h1>
-    <img src="images/canvas.png" width="400px" />
+    <img src="images/java.png" width="400px" />
     <p>
       I drew on an HTML canvas with the javascript 2d context API.  <a href="code/canvas.js">Here</a> is some of my code.
     </p>
