--- a/mod8.html
+++ b/mod8.html
@@ -14,6 +14,6 @@
       <source src="m4v/ohmcalc.m4v" type="video/mp4">
         Your browser does not support the video tag.
     </video>
-    <script src='js/FORLOOP.js'></script>
+    <script src='js/Javacode.js'></script>
   </body>
 </html>
