--- a/mod8.html
+++ b/mod8.html
@@ -8,7 +8,7 @@
     <h1>Java Uses</h1>
     <img src="images/java.png" width="400px" />
     <p>
-      I drew on an HTML canvas with the javascript 2d context API.  <a href="code/canvas.js">Here</a> is some of my code.
+      The Java programming language requires the presence of a software platform in order for compiled programs to be executed. Oracle supplies the Java platform for use with Java. The Android SDK is an alternative software platform, used primarily for developing Android applications.  <a href="code/canvas.js">Here</a> is some of my code.
     </p>
     <video width="400" height="300" controls>
       <source src="m4v/ohmcalc.m4v" type="video/mp4">
